[package]
name = "crawler"
version = "0.1.0"
authors = ["parker jones <parker.emailaddress@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.10.8", features = ["blocking"]}
select = "0.5.0"
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = { version = "0.5", features = ["with-uuid-0_8"] }