[package]
name = "crawler"
version = "0.1.0"
authors = ["parker jones <parker.emailaddress@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
env_logger = "0.7.*"
rusqlite = "0.24.1"
roxmltree = "0.13.0"
serde_derive = "1.0"
serde = "1.0"
serde-xml-rs = "0.4.0"
async-trait = "0.1.41"
futures = "0.3"
reqwest = { version = "0.10.8", features = ["blocking"]}
structopt = "0.3"
select = "0.5.0"
sitemap = "0.4.0"
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = { version = "0.5", features = ["with-uuid-0_8"] }